# hi

./: .replit  main.py  pyproject.toml  utils.py
attached_assets/: Pasted--import-yfinance-as-yf-import-pandas-as-pd-import-numpy-as-np-import-streamlit-as-st-def-get-analys-1740729075769.txt  Pasted-ImportError-background-gradient-requires-matplotlib-Traceback-File-home-runner-workspace-pyth-1740676587378.txt  Pasted-def-calculate-relative-valuation-info-metrics-if-P-E-in-selected-metrics--1740728328380.txt
pages/: __init__.py  compare.py  dcf_estimator.py  simulator.py  valuation.py  價值分析.py  多檔股票比較.py
utils/: __init__.py  analyst_forecasts.py  app.py  dcf_valuation.py  stock_data.py  technical_indicators.py
